--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@ animation: auto 15s infinite linear;
   background: #fff;
   border-right: 0.25rem solid transparent;
   border-top: 0.25rem solid transparent;
-  padding: 15px;
+  padding: 18px;
   
   
 }
@@ -1327,6 +1327,7 @@ transition: 0.26s linear;
 .Painting{
   display: grid;
   grid-template-columns: 0.45fr 0.45fr;
+  grid-template-rows: 0.45fr 0.45fr;
   justify-content: space-between;
   justify-items: center;
   width: 74%;
@@ -1337,7 +1338,7 @@ transition: 0.26s linear;
 .P1{
   display: grid;
   grid-template-rows: 30px 1fr;
-  row-gap: 0.2rem;
+  row-gap: 0.1rem;
   justify-content: center;
   justify-items: center;
   width: 500px;
@@ -2248,7 +2249,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <img src="https://zupimages.net/up/22/34/c7h6.jpg" alt="Ouagadougou">
         <figure>
           <figcaption style=" color:#565656; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 14px; text-align: left;">
-            Avenue d'Oubritenga - Ouagadougou
+            Avenue d'Oubritenga - Ouagadougou [Burkina Faso]
             </figcaption>
             
     </figure>
@@ -2260,7 +2261,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <figure> 
            <figcaption style=" color:#565656; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 14px; text-align: left;">
             
-            Les un-es mangent à leur faim tandis que les autres meurent de faim
+            La nourriture est mal repartie sinon personne ne mourrait de faim
             </figcaption>  <a name="CHANGE">
     </figure> 
    
@@ -2500,9 +2501,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       <br>
                       Résident permanent Canadien, il se reconstruit une nouvelle vie. Entre autres, il écrit ses mémoires, apprend le code informatique tout en souhaitant se former aux sciences des nouvelles technologies. Il se passione en développant ce site internet. 
                       <br>
-                      <br>
                       Gabriel veut créer une fondation pour soutenir l'éducation des enfants handicapés, défendre leurs droits et leur créer des opportunités<a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank"> au Burkina Faso.</a>
-                     Il aime la nature, la photographie, l'histoire, la géographie, l'architecture, le cyclisme, le football et le hockey sur glace.
+                     Il aime la nature, la photographie, l'histoire, la géographie, l'architecture, le cyclisme, le football et le hockey.
                     </p>      
       </div>
 
@@ -2555,4 +2555,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
