--- a/index.html
+++ b/index.html
@@ -196,13 +196,14 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            height: auto;
             width: 100%;
             background: transparent;
             color:#ff0;
             padding: 9px;
             font-family:'comic sans ms';
             font-size: 17px;
+            margin-top: 3px;
+            height: 45px;
 }
 
 .TYK1:hover{
@@ -272,7 +273,8 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            height: auto;
+            margin-top: 3px;
+            height: 45px;
             width: 100%;
             background: transparent;
             color: #ff0;
@@ -295,7 +297,8 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            height: auto;
+            margin-top: 3px;
+            height: 45px;
             width: 100%;
             background: transparent;
             color: #ff0;
@@ -318,7 +321,8 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            height: auto;
+            margin-top: 3px;
+            height: 45px;
             width: 100%;
             background: transparent;
             color:#ff0;
@@ -341,7 +345,8 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            height: auto;
+            margin-top: 3px;
+            height: 45px;
             width: 100%;
             background: transparent;
             color:#ff0;
@@ -363,7 +368,8 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            height: auto;
+            margin-top: 3px;
+            height: 45px;
             width: 100%;
             background: transparent;
             color:#ff0;
@@ -387,7 +393,8 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            height: auto;
+            margin-top: 3px;
+            height: 45px;
             width: 100%;
             background: transparent;
             color: #ff0;
@@ -2555,5 +2562,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
