--- a/index.html
+++ b/index.html
@@ -211,7 +211,9 @@
             border-bottom: 0.5rem solid rgb(1, 255, 14);
             color: rgba(255, 255, 255, 0.992);
             transition: 0.18s ease;
-            box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
+            border-top-right-radius: 1rem;
+            border-bottom-left-radius: 1rem;
+            box-shadow: 2px -2.4px 0.4rem 0 rgba(1, 3, 21, 0.992);
 }
 
           .navbar0{
@@ -288,7 +290,9 @@
             border-bottom: 0.5rem solid rgb(1, 255, 14);
             color: rgba(255, 255, 255, 0.992);
             transition: 0.18s ease;
-            box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
+            border-top-right-radius: 1rem;
+            border-bottom-left-radius: 1rem;
+            box-shadow: 2px -2.4px 0.4rem 0 rgba(1, 3, 21, 0.992);
           }
 
           .myDiv1{
@@ -312,7 +316,9 @@
             border-bottom: 0.5rem solid rgb(1, 255, 14);
             color: rgba(255, 255, 255, 0.992);
             transition: 0.18s ease;
-            box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
+            border-top-right-radius: 1rem;
+            border-bottom-left-radius: 1rem;
+            box-shadow: 2px -2.4px 0.4rem 0 rgba(1, 3, 21, 0.992);
           }
 
           .myDiv2{
@@ -336,7 +342,9 @@
             border-bottom: 0.5rem solid rgb(1, 255, 14);
             color: rgba(255, 255, 255, 0.992);
             transition: 0.18s ease;
-            box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
+            border-top-right-radius: 1rem;
+            border-bottom-left-radius: 1rem;
+            box-shadow: 2px -2.4px 0.4rem 0 rgba(1, 3, 21, 0.992);
           }
 
           .myDivT{
@@ -359,7 +367,9 @@
             border-bottom: 0.5rem solid rgb(1, 255, 14);
             color: rgba(255, 255, 255, 0.992);
             transition: 0.18s ease;
-            box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
+            border-top-right-radius: 1rem;
+            border-bottom-left-radius: 1rem;
+            box-shadow: 2px -2.4px 0.4rem 0 rgba(1, 3, 21, 0.992);
           }
 
           .Peinture{
@@ -383,7 +393,9 @@
             border-bottom: 0.5rem solid rgb(1, 255, 14);
             color: rgba(255, 255, 255, 0.992);
             transition: 0.18s ease;
-            box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
+            border-top-right-radius: 1rem;
+            border-bottom-left-radius: 1rem;
+            box-shadow: 2px -2.4px 0.4rem 0 rgba(1, 3, 21, 0.992);
           }
 
 
@@ -408,7 +420,9 @@
             border-bottom: 0.5rem solid rgb(1, 255, 14);
             color: rgba(255, 255, 255, 0.992);
             transition: 0.18s ease;
-            box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
+            border-top-right-radius: 1rem;
+            border-bottom-left-radius: 1rem;
+            box-shadow: 2px -2.4px 0.4rem 0 rgba(1, 3, 21, 0.992);
           }
 
           
@@ -2562,6 +2576,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
