--- a/index.html
+++ b/index.html
@@ -41,15 +41,14 @@
 
 .top-container{
         display: grid;
-        grid-template-columns: 0.6fr 0.5fr 0.5fr 1.45fr;
-        justify-content: center;
+        grid-template-columns: 0.55fr 0.5fr 0.5fr 1.45fr;
+        justify-content: space-between;
         justify-items: center;
         width: 100%;
         height: 2rem;
         object-fit: cover;
         font-family: 'georgia';
-        background: #000;
-        color: cyan;
+        background: transparent;
     }
 
     .DAH{
@@ -106,7 +105,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: cyan;
+      color: #000;
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -116,7 +115,7 @@
     .Translator:hover{
       transition: 0.25s linear;
       width: 100%;
-      color: #fff;
+      color: red;
     }
 
     .Calculator{
@@ -126,7 +125,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color:   cyan;
+      color:   #000;
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -135,7 +134,7 @@
     .Calculator:hover{
       transition: 0.25s linear;
       width: 100%;
-      color: #fff;
+      color: red;
     }
     
     .dico{
@@ -145,7 +144,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: cyan;
+      color: #000;
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -154,7 +153,7 @@
     .dico:hover{
       transition: 0.25s linear;
       width: 100%;
-      color: #fff;
+      color: red;
     }
 
     .datime{
@@ -164,7 +163,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: cyan;
+      color: #000;
       padding: 10px;
       font-family: Verdana; 
       font-size: 13px;
@@ -173,16 +172,16 @@
     .datime:hover{
       transition: 0.25s linear;
       width: 100%;
-      color: #fff;
+      color: red;
     }
     
     .navbar{
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgb(9, 48, 204);
+                background: rgb(21, 75, 130);
                  width: 100%;
-                 height: 65px;
+                 height: 133px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
@@ -198,10 +197,10 @@
             cursor: pointer;
             width: 100%;
             background: transparent;
-            color:#ff0;
+            color:#fff;
             padding: 9px;
-            font-family:'comic sans ms';
-            font-size: 17px;
+            font-family:'arial';
+            font-size: 19.5px;
             margin-top: 3px;
             height: 45px;
 }
@@ -209,7 +208,7 @@
 .TYK1:hover{
   background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: rgba(255, 255, 255, 0.992);
+            color: yellow;
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
@@ -224,7 +223,7 @@
             column-gap: 1rem;
             width: 100%; 
             height: 136px; 
-            background: #b8b8b858;
+            background: #b8b8b853;
             border-bottom: 0.6rem solid rgba(255, 89, 0, 0.841);
             opacity: 0.99;
           }
@@ -246,18 +245,18 @@
           flex-direction: column; 
           justify-content: center; 
           align-items: center; 
-          color: #ff0;
+          color: rgba(21, 75, 130, 0.968);
           width: 100%; 
-          height: 55px; 
+          height: 75px; 
           padding: 9.5px; 
-          font-size: 0.95rem; 
+          font-size: 1.02rem; 
           font-family: 'arial'; 
           line-height: 20px;
-          border-top: 0.1rem solid rgba(9, 49, 209, 0.55);
+          border-top: 0.1rem solid rgba(21, 76, 130, 0.623);;
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
           background: -webkit-linear-gradient( red 0%,#fffffff9 100%);
-          box-shadow: 0.5px 1.53px 0.5rem 0 rgba(167, 167, 167, 0.799);
+          box-shadow: 0.45px 1px 0.45rem 0 rgba(167, 167, 167, 0.799);
          }
 
          .YIKI:hover{
@@ -279,10 +278,10 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: #ff0;
+            color: #fff;
             padding: 9px;
-            font-family:'comic sans ms';
-            font-size: 17px;
+            font-family:'arial';
+            font-size: 19.5px;
           }
 
           .myDiv:hover{
@@ -305,10 +304,10 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: #ff0;
+            color: #fff;
             padding: 9px;
-            font-family:'comic sans ms';
-            font-size: 17px;
+            font-family:'arial';
+            font-size: 19.5px;
           }
 
           .myDiv1:hover{
@@ -331,10 +330,10 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color:#ff0;
+            color:#fff;
             padding: 9px;
-            font-family:'comic sans ms';
-            font-size: 17px;
+            font-family:'arial';
+            font-size: 19.5px;
             }
 
           .myDiv2:hover{
@@ -357,10 +356,10 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color:#ff0;
+            color:#fff;
             padding: 9px;
-            font-family:'comic sans ms';
-            font-size: 17px;
+            font-family:'arial';
+            font-size: 19.5px;
           }
           .myDivT:hover{
             background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
@@ -382,10 +381,10 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color:#ff0;
+            color:#fff;
             padding: 9px;
-            font-family:'comic sans ms';
-            font-size: 17px;
+            font-family:'arial';
+            font-size: 19.5px;
           }
 
           .Peinture:hover{
@@ -409,10 +408,10 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: #ff0;
+            color: #fff;
             padding: 9px;
-            font-family:'comic sans ms';
-            font-size: 17px;
+            font-family:'arial';
+            font-size: 19.5px;
             }
 
           .myDiv6:hover{
@@ -838,7 +837,7 @@ animation: auto 15s infinite linear;
   width: 79%;
   height: auto;
   border-top: 2rem solid rgba(189, 189, 189, 0.396);
-  margin-top: 2rem;
+  margin-top: 5.25rem;
 }
 
 .kpt{
@@ -2511,7 +2510,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                        En 2007, 2008, 2013, Gabriel a voyagé en Europe pour la recherche de fonds. Ses séjours l'ont conduit notamment à Genève et à Sion en Suisse en collaboration avec <a href="https://www.transporthandicap.ch/www/1-accueil" target="_blank"> Transport Handicap Valais</a> et à Karlsruhe en Allemagne pour donner des conférences sur l'association PAAS NEERE dont il était président, les différents projets à implémenter, les défis à atteindre et l'impact de l'association pour les communautés locales de la région de Ziniare.
                       <br>
                       <br>
-                      En 2012, il a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour l'ensemble de sa contribution au développement et l'épanouissement d'une communauté différente, marginalisée dans la société dont sont les personnes handicapées.
+                      En 2012, il a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour l'ensemble de sa contribution au développement et l'épanouissement d'une communauté différente, marginalisée dans la société dont les personnes handicapées.
                       <br>
                       <br>
                       En 2016 il a crée Tiki N'Yiki pour élargir le soutien aux enfants orphelins. En Juillet 2016 Gabriel a été invité aux Etats-Unis pendant 3 mois pour faire du FUNDRAISING au profit des projets de Tiki N'Yiki.
@@ -2576,6 +2575,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
