--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgb(21, 75, 130);
+                background: rgb(23, 74, 125);
                  width: 100%;
                  height: 133px;
                  object-fit: cover;
@@ -206,7 +206,7 @@
 }
 
 .TYK1:hover{
-  background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
+  background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
             color: yellow;
             transition: 0.18s ease;
@@ -222,9 +222,9 @@
             justify-items: center;
             column-gap: 1rem;
             width: 100%; 
-            height: 136px; 
+            height: 137px; 
             background: #b8b8b853;
-            border-bottom: 0.6rem solid rgba(255, 89, 0, 0.841);
+            border-bottom: 0.6rem solid rgba(255, 89, 0, 0.76);
             opacity: 0.99;
           }
           .BIEN{
@@ -245,18 +245,18 @@
           flex-direction: column; 
           justify-content: center; 
           align-items: center; 
-          color: rgba(21, 75, 130, 0.968);
+          color: rgba(21, 64, 107, 0.968);
           width: 100%; 
           height: 75px; 
           padding: 9.5px; 
           font-size: 1.02rem; 
           font-family: 'arial'; 
           line-height: 20px;
-          border-top: 0.1rem solid rgba(21, 76, 130, 0.623);;
+          border-top: 0.1rem solid rgba(22, 78, 134, 0.579);
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
           background: -webkit-linear-gradient( red 0%,#fffffff9 100%);
-          box-shadow: 0.45px 1px 0.45rem 0 rgba(167, 167, 167, 0.799);
+          box-shadow: 0.4px 1px 0.4rem 0 rgba(184, 184, 184, 0.799);
          }
 
          .YIKI:hover{
@@ -285,9 +285,9 @@
           }
 
           .myDiv:hover{
-            background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
+            background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: rgba(255, 255, 255, 0.992);
+            color: yellow;
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
@@ -311,9 +311,9 @@
           }
 
           .myDiv1:hover{
-            background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
+            background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: rgba(255, 255, 255, 0.992);
+            color: yellow;
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
@@ -337,9 +337,9 @@
             }
 
           .myDiv2:hover{
-            background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
+            background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: rgba(255, 255, 255, 0.992);
+            color: yellow;
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
@@ -362,9 +362,9 @@
             font-size: 19.5px;
           }
           .myDivT:hover{
-            background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
+            background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: rgba(255, 255, 255, 0.992);
+            color: yellow;
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
@@ -388,9 +388,9 @@
           }
 
           .Peinture:hover{
-            background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
+            background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: rgba(255, 255, 255, 0.992);
+            color: yellow;
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
@@ -415,9 +415,9 @@
             }
 
           .myDiv6:hover{
-            background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
+            background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: rgba(255, 255, 255, 0.992);
+            color: yellow;
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
@@ -837,7 +837,7 @@ animation: auto 15s infinite linear;
   width: 79%;
   height: auto;
   border-top: 2rem solid rgba(189, 189, 189, 0.396);
-  margin-top: 5.25rem;
+  margin-top: 5.5rem;
 }
 
 .kpt{
@@ -845,7 +845,7 @@ animation: auto 15s infinite linear;
   height: auto;
   font-family:Arial, Helvetica, sans-serif;
   line-height: 25px;
-  color: #20529d;
+  color: #1c3978;
   word-spacing: 1.5px;
   text-align: left;
   font-size: 17.49px; 
@@ -1476,7 +1476,7 @@ function myFunction() {
 
         <div class="YIKI">
         
-        <p style="margin-top: 15px;"> <b>Tiki N'Yiki</b></p>
+        <p style="margin-top: 17.6px;"> <b>Tiki N'Yiki</b></p>
       
                 </div>
               </a>
@@ -2575,8 +2575,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
 
 
