--- a/index.html
+++ b/index.html
@@ -795,10 +795,10 @@ animation: auto 15s infinite linear;
     text-align: justify;
     width: 74%;
     height: auto;
-    font-family:Georgia, 'Times New Roman', Times, serif; 
-    font-size: 20px; 
-    color: #000;
-    line-height: 28px;
+    font-family:Arial, Helvetica, sans-serif; 
+    font-size: 17.5px; 
+    color: #000000f4;
+    line-height: 27px;
     padding: 10px;
 }
 .k1 img{
@@ -916,10 +916,10 @@ animation: auto 15s infinite linear;
     text-align: justify;
     width: 101%;
     height: auto;
-    font-family:Georgia, 'Times New Roman', Times, serif; 
-    font-size: 20px; 
-    color: #000;
-    line-height: 28px;
+    font-family:Arial, Helvetica, sans-serif; 
+    font-size: 17.5px; 
+    color: #000000f4;
+    line-height: 27px;
 }
 
 .CRT2{
@@ -1169,10 +1169,10 @@ height: 220px;
 .TXT{
   width: 100%;
   height: auto;
-    font-family:Georgia, 'Times New Roman', Times, serif;  
-    line-height: 28px;
-    font-size: 20px; 
-    color: #000;
+  font-family:Arial, Helvetica, sans-serif; 
+    font-size: 17.5px; 
+    color: #000000f4;
+    line-height: 27px;
     text-align: justify;
 }
 
@@ -1186,10 +1186,10 @@ height: 220px;
     text-align: justify;
     width: 72.5%;
     height: auto;
-    font-family:Georgia, 'Times New Roman', Times, serif; 
-    font-size: 20px; 
-    color: #000;
-    line-height: 28px;
+    font-family:Arial, Helvetica, sans-serif; 
+    font-size: 17.5px; 
+    color: #000000f4;
+    line-height: 27px;
     border-top: 0.1rem solid #000;
 }
 
@@ -1201,10 +1201,10 @@ height: 220px;
   justify-items: center;
   width: 100%;
   height: auto;
-    font-family:Georgia, 'Times New Roman', Times, serif; 
-    font-size: 20px; 
-    color: #000;
-    line-height: 28px;
+  font-family:Arial, Helvetica, sans-serif; 
+    font-size: 17.5px; 
+    color: #000000f4;
+    line-height: 27px;
 }
 
 .CHRZiniare {
@@ -1251,10 +1251,10 @@ transition: 0.26s linear;
   justify-items: center;
   width: 100%;
   height: auto;
-    font-family:Georgia, 'Times New Roman', Times, serif; 
-    font-size: 20px; 
-    color: #000;
-    line-height: 28px;
+  font-family:Arial, Helvetica, sans-serif; 
+    font-size: 17.5px; 
+    color: #000000f4;
+    line-height: 27px;
     border-top: 0.1rem solid #000;
 }
 
@@ -1285,20 +1285,20 @@ transition: 0.26s linear;
   justify-items: center;
   width: 74%;
   height: auto;
-    font-family:Georgia, 'Times New Roman', Times, serif; 
-    line-height: 28px;
-    font-size: 20px; 
-    color: #000;
+  font-family:Arial, Helvetica, sans-serif; 
+    font-size: 17.5px; 
+    color: #000000f4;
+    line-height: 27px;
     border-top: 0.1rem solid #000;
     margin-top: 2.5rem;
   
 }
 
 .Texo{
-    font-family:Georgia, 'Times New Roman', Times, serif; 
-    line-height: 28px;
-    font-size: 20px; 
-    color: #000;
+  font-family:Arial, Helvetica, sans-serif; 
+    font-size: 17.5px; 
+    color: #000000f4;
+    line-height: 27px;
     text-align: justify;
 }
 
@@ -2575,5 +2575,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
