--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             box-shadow: 2px -2.4px 0.4rem 0 rgba(1, 3, 21, 0.992);
 }
 
-          .navbar0{
+.navbar0{
             display: grid;
             grid-template-columns: 0.5fr 1.5fr;
             justify-content: left;
@@ -225,8 +225,9 @@
             height: 137px; 
             background: #b8b8b853;
             border-bottom: 0.6rem solid rgba(255, 89, 0, 0.76);
-            opacity: 0.99;
+            opacity: 1;
           }
+
           .BIEN{
             display: grid;
             grid-template-rows: 1fr;
@@ -1563,8 +1564,8 @@ function myFunction() {
   </a>
 
   <div class="BIEN"> 
-  Bienvenue sur ce site internet en développement ! La page web ci-dessous est sommairement descriptive du site une fois fini.
-  Certaines photos et certains liens hypertextes sont temporaires.
+  Bienvenue sur ce site internet en développement ! Cette page web ci-dessous est sommairement descriptive du contenu du site internet une fois fini.
+  Pour ce faire certaines photos et certains liens hypertextes sont temporaires.
 <br>
   Merci pour votre compréhension ! Bonne Visite !</p>
 </div>
@@ -2575,5 +2576,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
