--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@ animation: auto 15s infinite linear;
     font-size: 17.5px; 
     color: #000000f4;
     line-height: 27px;
-    padding: 16px;
+    padding: 20px;
 }
 .k1 img{
   width: 100%;
@@ -810,7 +810,7 @@ animation: auto 15s infinite linear;
 }
 
 .k1:hover{
-    background: rgba(64, 135, 206, 0.417);
+    background: rgba(137, 189, 241, 0.331);
 }
 
 .Noel{
@@ -926,6 +926,11 @@ animation: auto 15s infinite linear;
     font-size: 17.5px; 
     color: #000000f4;
     line-height: 27px;
+    padding: 15px;
+}
+
+.CRT1:hover{
+    background: rgba(137, 189, 241, 0.331);
 }
 
 .CRT2{
@@ -1085,7 +1090,7 @@ a:visited{
   justify-items: center;  
   width: 100%; 
   height: 25%;
-  padding: 10px;
+  padding: 15px;
 }
 
 .AK{
@@ -1197,6 +1202,10 @@ height: 220px;
     color: #000000f4;
     line-height: 27px;
     border-top: 0.1rem solid #000;
+    padding: 15px;
+}
+.HLTHY:hover{
+  background: rgba(137, 189, 241, 0.331);
 }
 
 .Healthy{
@@ -1297,7 +1306,11 @@ transition: 0.26s linear;
     line-height: 27px;
     border-top: 0.1rem solid #000;
     margin-top: 2.5rem;
-  
+    padding: 15px;
+}
+
+.CC:hover{
+  background: rgba(137, 189, 241, 0.331);
 }
 
 .Texo{
@@ -1358,6 +1371,11 @@ transition: 0.26s linear;
   width: 74%;
   height: auto;
   background: transparent;
+  padding: 15px;
+}
+
+.Painting:hover{
+  background: rgba(137, 189, 241, 0.331);
 }
 
 .P1{
@@ -2580,6 +2598,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
