--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: transparent;
+    background: rgba(148, 201, 255, 0.035);
     justify-content: center;
     align-items: center;
     padding: 10px; 
@@ -810,7 +810,7 @@ animation: auto 15s infinite linear;
 }
 
 .k1:hover{
-    background: rgba(137, 189, 241, 0.331);
+  background: rgba(137, 189, 241, 0.284);
 }
 
 .Noel{
@@ -930,7 +930,7 @@ animation: auto 15s infinite linear;
 }
 
 .CRT1:hover{
-    background: rgba(137, 189, 241, 0.331);
+  background: rgba(137, 189, 241, 0.284);
 }
 
 .CRT2{
@@ -1205,7 +1205,7 @@ height: 220px;
     padding: 15px;
 }
 .HLTHY:hover{
-  background: rgba(137, 189, 241, 0.331);
+  background: rgba(137, 189, 241, 0.284);
 }
 
 .Healthy{
@@ -1310,7 +1310,7 @@ transition: 0.26s linear;
 }
 
 .CC:hover{
-  background: rgba(137, 189, 241, 0.331);
+  background: rgba(137, 189, 241, 0.284);
 }
 
 .Texo{
@@ -1366,7 +1366,7 @@ transition: 0.26s linear;
 .Painting{
   display: grid;
   grid-template-columns: 0.45fr 0.45fr;
-  justify-content: space-between;
+  justify-content: center;
   justify-items: center;
   width: 74%;
   height: auto;
@@ -1375,7 +1375,7 @@ transition: 0.26s linear;
 }
 
 .Painting:hover{
-  background: rgba(137, 189, 241, 0.331);
+  background: rgba(137, 189, 241, 0.284);
 }
 
 .P1{
@@ -1391,7 +1391,7 @@ transition: 0.26s linear;
 }
 
 .P1 img{
-  width: 440px;
+  width: 400px;
   height: 300px;
 }
 .PHOTOCAPTION{
@@ -1401,7 +1401,7 @@ transition: 0.26s linear;
   width: 100%;
   height: 40px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  color:rgb(2, 160, 239);
+  color:rgb(2, 132, 239);
 
 }
 </style>
@@ -2451,7 +2451,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
   
   <div class="PHOTOCAPTION">
   <h3>
-      Inondation de pluies diluviennes en Allemagne 
+      Inondation en Allemagne 
     </h3>
     </div>
   
