--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: rgba(148, 201, 255, 0.035);
+    background: rgba(158, 206, 255, 0.035);
     justify-content: center;
     align-items: center;
     padding: 10px; 
@@ -1987,7 +1987,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <div class="AK">
           <img src="https://cdn-icons-png.flaticon.com/512/167/167707.png" alt="Icon of a school building">
         <figure>
-            <figcaption style="font-family: 'arial'; font-size: 12px; color: #000; margin-top: -1rem;">
+            <figcaption style="font-family: 'arial'; font-size: 12px; color: #000; ">
               Type de building pour l'Académie Tiki N'Yiki
             </figcaption>
           </figure>
@@ -2598,7 +2598,4 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
 
