--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@ animation: auto 15s infinite linear;
 }
 
 .k1:hover{
-  background: rgba(137, 189, 241, 0.284);
+  background: rgba(137, 189, 241, 0.243);
 }
 
 .Noel{
@@ -930,7 +930,7 @@ animation: auto 15s infinite linear;
 }
 
 .CRT1:hover{
-  background: rgba(137, 189, 241, 0.284);
+  background: rgba(137, 189, 241, 0.243);
 }
 
 .CRT2{
@@ -1205,7 +1205,7 @@ height: 220px;
     padding: 15px;
 }
 .HLTHY:hover{
-  background: rgba(137, 189, 241, 0.284);
+  background: rgba(137, 189, 241, 0.243);
 }
 
 .Healthy{
@@ -1310,7 +1310,7 @@ transition: 0.26s linear;
 }
 
 .CC:hover{
-  background: rgba(137, 189, 241, 0.284);
+  background: rgba(137, 189, 241, 0.243);
 }
 
 .Texo{
@@ -1375,7 +1375,7 @@ transition: 0.26s linear;
 }
 
 .Painting:hover{
-  background: rgba(137, 189, 241, 0.284);
+  background: rgba(137, 189, 241, 0.243);
 }
 
 .P1{
@@ -1401,7 +1401,7 @@ transition: 0.26s linear;
   width: 100%;
   height: 40px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  color:rgb(2, 132, 239);
+  color:rgb(7, 121, 214);
 
 }
 </style>
@@ -2536,7 +2536,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       En 2012, il a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour l'ensemble de sa contribution au développement et l'épanouissement d'une communauté différente, marginalisée dans la société dont les personnes handicapées.
                       <br>
                       <br>
-                      En 2016 il a crée Tiki N'Yiki pour élargir le soutien aux enfants orphelins. En Juillet 2016 Gabriel a été invité aux Etats-Unis pendant 3 mois pour faire du FUNDRAISING au profit des projets de Tiki N'Yiki.
+                      En 2016 il a créé Tiki N'Yiki pour élargir le soutien aux enfants orphelins et à d'autres enfants marginalisés. En Juillet 2016 Gabriel a été invité aux Etats-Unis pour 3 mois afin de faire non seulement du networking mais aussi du fundraising et vendre de l'artisanat [Batiks] pour pouvoir financer certains projets de Tiki N'Yiki dont les volets éducation et sécurité alimentaire.
                       <br>
                        <br>
                       En 2017 il était obligé de s'exiler au Canada pour des raisons sécuritaires si bien que certaines activités de Tiki N'Yiki y compris le projet EDUCATION ont été momentanément interrompues. Elles vont être redéfinies si la sécurité se rétablit. 
@@ -2598,4 +2598,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
