--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(0, 128, 0, 0.849);
+      color: rgb(1, 184, 1);
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -115,6 +115,7 @@
     .Translator:hover{
       transition: 0.25s linear;
       width: 100%;
+      height: auto;
       color: red;
     }
 
@@ -125,7 +126,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(0, 128, 0, 0.849);
+      color: rgb(1, 184, 1);
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -134,6 +135,7 @@
     .Calculator:hover{
       transition: 0.25s linear;
       width: 100%;
+      height: auto;
       color: red;
     }
     
@@ -144,7 +146,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(0, 128, 0, 0.849);
+      color: rgb(1, 184, 1);
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -153,6 +155,7 @@
     .dico:hover{
       transition: 0.25s linear;
       width: 100%;
+      height: auto;
       color: red;
     }
 
@@ -163,7 +166,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(0, 128, 0, 0.849);
+      color: rgb(1, 184, 1);
       padding: 10px;
       font-family: Verdana; 
       font-size: 13px;
@@ -172,6 +175,7 @@
     .datime:hover{
       transition: 0.25s linear;
       width: 100%;
+      height: auto;
       color: red;
     }
     
@@ -179,7 +183,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgb(22, 73, 125);
+                background: rgb(23, 75, 127);
                  width: 100%;
                  height: 128px;
                  object-fit: cover;
@@ -233,7 +237,7 @@
             grid-template-rows: 1fr;
             justify-content: center; 
             justify-items: center;
-            color: rgba(15, 49, 145, 0.87);
+            color: rgba(20, 54, 149, 0.898);
             font-family:'arial black'; 
             font-size: 1rem;
             text-align: left;
