--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   width: 97%;
   font-family: 'verdana';
   font-size: 13px; 
-  color: #00000afc;
+  color: rgba(255, 77, 0, 0.833);
   padding: 5px;
   margin-top: -1.3rem;
 }
@@ -228,7 +228,7 @@
             width: 100%; 
             height: 137px; 
             background: #b8b8b853;
-            border-bottom: 0.6rem solid rgba(255, 89, 0, 0.76);
+            border-bottom: 0.6rem solid rgba(255, 89, 0, 0.783);
             opacity: 1;
           }
 
@@ -2602,5 +2602,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
