--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         height: 2rem;
         object-fit: cover;
         font-family: 'georgia';
-        background: #fff;
+        background: transparent;
     }
 
     .DAH{
@@ -2602,6 +2602,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
