--- a/index.html
+++ b/index.html
@@ -2537,7 +2537,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                        </a> dans laquelle il a enseigné des enfants handicapés et orphelins, animé de multiples séances de sensibilisation avec thème focal "Handicap et Inclusion Sociale" de 2006 à 2014.
                        <br>
                        <br>
-                       En 2007, 2008, 2013, Gabriel a voyagé en Europe pour la recherche de fonds. Ses séjours l'ont conduit notamment à Genève et à Sion en Suisse en collaboration avec <a href="https://www.transporthandicap.ch/www/1-accueil" target="_blank"> Transport Handicap Valais</a> et à Karlsruhe en Allemagne pour donner des conférences sur l'association PAAS NEERE dont il était président, les différents projets à implémenter, les défis à atteindre et l'impact de l'association pour les communautés locales de la région de Ziniare.
+                       En 2007, 2008, 2013, Gabriel a voyagé en Europe pour la recherche de fonds. Ses séjours l'ont conduit notamment à Genève, à Sion, à Delémont en Suisse en collaboration avec ses ami-es et les dirigeants de <a href="https://www.transporthandicap.ch/www/1-accueil" target="_blank"> Transport Handicap en Valais</a> et à Rasttat et Kuppenheim dans le Baden-Württemberg en Allemagne pour donner des series de conférences sur l'association PAAS NEERE dont il était président, les différents projets à implémenter, les défis à atteindre et l'impact de l'association pour les communautés locales de la région de Ziniare.
                       <br>
                       <br>
                       En 2012, il a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour l'ensemble de sa contribution au développement et l'épanouissement d'une communauté différente, marginalisée dans la société dont les personnes handicapées.
@@ -2605,6 +2605,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
