--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: rgba(158, 206, 255, 0.035);
+    background: rgba(23, 75, 127, 0.069);
     justify-content: center;
     align-items: center;
     padding: 10px; 
@@ -692,7 +692,7 @@ position: relative;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background: #fff;
+  background: transparent;
   width: 72%;
   height: 516;
   border: 0.11rem solid rgba(203, 203, 203, 0.876); 
@@ -712,7 +712,7 @@ position: relative;
     overflow: hidden;
     width: 100%;
     height: 505px;
-    background-color: #fff;
+    background: transparent;
     font-family: 'verdana';
     font-size: 12px;
     color:#000;
@@ -2605,9 +2605,4 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
-
-
 
