--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         height: 2rem;
         object-fit: cover;
         font-family: 'georgia';
-        background: transparent;
+        background: #060606f0;
     }
 
     .DAH{
@@ -2605,4 +2605,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
