--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 .top-container{
         display: grid;
         grid-template-columns: 0.55fr 0.5fr 0.5fr 1.45fr;
-        justify-content: space-between;
+        justify-content: center;
         justify-items: center;
         width: 100%;
         height: 2rem;
         object-fit: cover;
         font-family: 'georgia';
-        background: #000;
+        background: #000000e3;
     }
 
     .DAH{
@@ -81,7 +81,7 @@
   width: 97%;
   font-family: 'verdana';
   font-size: 13px; 
-  color: green;
+  color: rgba(0, 128, 0, 0.944);
   padding: 5px;
   margin-top: -1.3rem;
 }
@@ -105,7 +105,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgb(1, 184, 1);
+      color: gold;
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -126,7 +126,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgb(1, 184, 1);
+      color: gold;
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -146,7 +146,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgb(1, 184, 1);
+      color: gold;
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -166,7 +166,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgb(1, 184, 1);
+      color: gold;
       padding: 10px;
       font-family: Verdana; 
       font-size: 13px;
@@ -2606,5 +2606,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
