--- a/index.html
+++ b/index.html
@@ -1400,7 +1400,7 @@ transition: 0.26s linear;
 
 .P1 img{
   width: 400px;
-  height: 300px;
+  height: 250px;
 }
 .PHOTOCAPTION{
   display: flex;
@@ -1894,9 +1894,10 @@ Tiki N'Yiki veut oeuvrer pour changer la tendance de telles mentalités, faire t
   <strong>Discrimination et barrières sociales
 </strong>
 </span>
-  <p>
+  
     <br>
-    Les personnes handicapées sont discriminées partout à travers le monde. Mais celles d'Afrique et spécialement du Burkina Faso expérimentent de <a href="https://www.ouestaf.com/personnes-vivant-avec-un-handicap-marginalisees-par-letat-au-burkina/" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">sévères marginalisations de l'état qui était censée les aider ou même de la communauté.</a>.
+    Les personnes handicapées sont discriminées partout à travers le monde. Mais celles d'Afrique et spécialement du Burkina Faso expérimentent de <a href="https://www.ouestaf.com/personnes-vivant-avec-un-handicap-marginalisees-par-letat-au-burkina/" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">sévères marginalisations de l'état qui était censée les aider ou même de la communauté.
+    </a>.
     <br>  
     <br>
     Sinon pourquoi des personnes handicapées dépendantes et vivant isolées sont oubliées quand on doit leur apporter à manger ou à boire, les faire prendre un bain ou leur apporter un besoin quelconque ?
@@ -1909,16 +1910,18 @@ Tiki N'Yiki veut oeuvrer pour changer la tendance de telles mentalités, faire t
     <br>  
     <br>
     <em style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: green;">La probable réponse proche à ces questions est : 
-      <a href="https://www.chrc-ccdp.gc.ca/fr/droits-de-la-personne/quest-ce-que-la-discrimination" target="_blank"><b style="color: red;">LA DISCRIMINATION. </b> </em>  </a> 
+      <a href="https://www.chrc-ccdp.gc.ca/fr/droits-de-la-personne/quest-ce-que-la-discrimination" target="_blank"><b style="color: red;">LA DISCRIMINATION. 
+      </b> </em>  
+    </a> 
     <br>  
     <br>
     <b style="color: rgb(0, 174, 255); font-size: 19.5px;">Mais il faut que ces discriminations cessent et que les barrières sociales tombent car les personnes handicapées sont avant tout des êtres humains qui ont aussi des droits humains.</b>
-  </p>
+  
   </div>
 
   <div class="k1">
     <hr style="color: rgb(13, 31, 136); justify-self: left;"> 
-    <br> 
+    <br>  
     <span style="background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: left;">
       <strong>Manque d'infrastructures, Négligeance et Indifférence. 
     </strong>
@@ -1934,6 +1937,7 @@ Tiki N'Yiki veut oeuvrer pour changer la tendance de telles mentalités, faire t
         Il est difficile de dire exactement des chiffres illustratifs mais l'indifférence de la société est flagrante et inquiétante. Si bien que même sans chiffres, de par les comportements et les agissements envers les personnes différentes dont les personnes handicapées, il est très évident que beaucoup reste à faire pour mieux améliorer et renforcer le vivre-ensemble. 
   </p>
   <hr style="color: rgb(13, 31, 136);">
+  <br>
     <p><span style="background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: right;">
       
       <strong>
@@ -2606,6 +2610,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
