--- a/index.html
+++ b/index.html
@@ -1597,7 +1597,7 @@ function myFunction() {
   Bienvenue sur ce site internet en développement ! Cette page internet est sommairement descriptive du contenu et du plan du site une fois terminé.
   Pour ce faire certaines photos, images et/ou favicons et certains liens hypertextes sont temporaires.
 <br>
-<b style="color: darkblue;">Merci pour votre compréhension ! Bonne Visite !</b></p>
+<b style="color: green;">Merci pour votre compréhension ! Bonne Visite !</b></p>
 </div>
 
 </div>
@@ -2610,6 +2610,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
