--- a/index.html
+++ b/index.html
@@ -1894,10 +1894,8 @@ Tiki N'Yiki veut oeuvrer pour changer la tendance de telles mentalités, faire t
   <strong>Discrimination et barrières sociales
 </strong>
 </span>
-  
     <br>
-    Les personnes handicapées sont discriminées partout à travers le monde. Mais celles d'Afrique et spécialement du Burkina Faso expérimentent de <a href="https://www.ouestaf.com/personnes-vivant-avec-un-handicap-marginalisees-par-letat-au-burkina/" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">sévères marginalisations de l'état qui était censée les aider ou même de la communauté.
-    </a>.
+    Les personnes handicapées sont discriminées partout à travers le monde. Mais celles d'Afrique et spécialement du Burkina Faso expérimentent de sévères marginalisations dans la société et même de l'état qui était censé les aider et protéger.<a href="https://www.ouestaf.com/personnes-vivant-avec-un-handicap-marginalisees-par-letat-au-burkina/" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">[Lire plus...]</a>
     <br>  
     <br>
     Sinon pourquoi des personnes handicapées dépendantes et vivant isolées sont oubliées quand on doit leur apporter à manger ou à boire, les faire prendre un bain ou leur apporter un besoin quelconque ?
@@ -2610,4 +2608,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
