--- a/index.html
+++ b/index.html
@@ -1784,7 +1784,7 @@ function myFunction() {
             </div>
           </a>
 
-            <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">
+            <a href="https://www.ontb.bf/" target="_blank">
           
               <div class="BUR">
          <img src="https://ow-prayer-api.info/files/en/images/main-maps/burk-02.png" alt="Carte du Burkina Faso">
@@ -2608,5 +2608,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
