--- a/index.html
+++ b/index.html
@@ -1727,7 +1727,7 @@ function myFunction() {
         </div>
       </a>
       
-        <div class="k1" >
+        <div class="k1" style="width: 72%; margin-top: 0.5rem;">
 
           <hr style="color: rgb(13, 31, 136); justify-self: left;"> 
           
@@ -2608,6 +2608,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
