--- a/index.html
+++ b/index.html
@@ -1801,22 +1801,22 @@ function myFunction() {
 
         <div class="CRT1">
             
-          Le Burkina Faso ou pays des hommes intègres est un pays sahélien, enclavé au coeur de l'Afrique de l'Ouest et s'étendant sur une superficie de :
+          Le Burkina Faso ou pays des hommes intègres est un pays sahélien indépendant le 5 août 1960 de la France. Il est enclavé au coeur de l'Afrique de l'Ouest et s'étend sur une superficie de :
 
-   <em><b>274.220 kilomètres carrés </b><a href="https://donnees.banquemondiale.org/indicator/AG.SRF.TOTL.K2?locations=BF" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">[Sources: Banque Mondiale] </a>avec une population approximative de <b>23.300.000 habitants. </b><a href="https://www.unfpa.org/data/world-population/BF" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank"> [Sources: UNFPA - UNITED NATIONS POPULATION FUND]</a> </em> 
+   <em><b>274.220 kilomètres carrés </b><a href="https://donnees.banquemondiale.org/indicator/AG.SRF.TOTL.K2?locations=BF" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">[Sources: Banque Mondiale] </a>avec une population approximative de <b>23.300.000 habitants. </b><a href="https://www.unfpa.org/data/world-population/BF" style="font-size: 16px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank"> [Sources: UNFPA - UNITED NATIONS POPULATION FUND]</a> </em> 
      
-       Il partage des frontières au nord et nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin. Sa capitale est Ouagadougou.
+       Le Burkina Faso partage des frontières communes au nord et nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin. Sa capitale est Ouagadougou. Les habitants du Burkina Faso sont appélés des Burkinabè ou Burkinabé.
    <br>
    <br>
-   Le Burkina Faso bénéficie d'un climat tropical sahélien caracterisé par 4 mois de pluviométrie et 8 mois de sécheresse. En dépit de cette réalité climatique, son économie repose en grande partie sur l'agriculture, l'élévage et le maraîchage.
+   Il bénéficie d'un climat tropical sahélien caracterisé par 4 mois de pluviométrie et 8 mois de sécheresse. En dépit de cette réalité climatique, son économie repose en grande partie sur l'agriculture, l'élévage et le maraîchage.
    Mais elle se diversifie de plus en plus à travers d'autres secteurs comme les services et les nouvelles technologies.  
    <br>
    <br> 
-   Bien que l'économie soit fortement impactée par les crises sécuritaire et humanitaire qui sécouent la sous-région y compris le Mali et le Niger dont il partage des frontières commune, le peuple Burkinabè reste toujours debout et espère par de sa jeunesse 
-   arriver au changement positif des conditions sociales de vie.
+   Bien que son économie soit fortement impactée par des crises sécuritaire et humanitaire qui sécouent la sous-région y compris le Mali et le Niger, le peuple Burkinabè reste toujours debout et espère de par de sa jeunesse 
+   atteindre un changement positif des conditions sociales de vie.
    <br> 
    <br>
-   Par ailleurs malgré une population croissante de plus de 3 226 627 de personnes handicapées  <a href="https://www.adry.up.ac.za/section-b-country-reports-2022/republique-du-burkina-faso" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">[Sources: African Disability Rights - Yearbook =>Burkina Faso =>1) Les Indicateurs Démographiques =>1.3) Nombre Total et Pourcentage des Personnes Handicapées au Burkina Faso]</a> dont le handicap est généralement causé soit par la Polio (poliomyétlie), soit par d'autres maladies, soit par la vieillesse et/ou de cas accidentels, il est encore fréquent d'observer que de nombreuses personnes handicapées sont sous-estimées, négligées, rejéttées et donc souvent livrées à elles-mêmes. 
+   Mais malgré une population croissante de 3 226 627 de personnes handicapées  <a href="https://www.adry.up.ac.za/section-b-country-reports-2022/republique-du-burkina-faso" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">[Sources: African Disability Rights - Yearbook =>Burkina Faso =>1) Les Indicateurs Démographiques =>1.3) Nombre Total et Pourcentage des Personnes Handicapées au Burkina Faso]</a> dont le handicap est généralement causé soit par la Polio (poliomyétlie), soit par d'autres maladies, soit par la vieillesse et/ou de cas accidentels, il est encore fréquent d'observer que de nombreuses personnes handicapées sont sous-estimées, négligées, rejéttées et donc souvent livrées à elles-mêmes. 
    <br> 
    <br> 
    Ceci n'est pas seulement un fait causé par une culture toxique d'exclusion dûe aux discriminations et barrières sociales,
@@ -1868,7 +1868,7 @@ Tiki N'Yiki veut oeuvrer pour changer la tendance de telles mentalités, faire t
 
 </a>
 
-<a href="https://fr.wikipedia.org/wiki/Coucher_de_soleil" target="_blank">
+<a href="https://fr.wikipedia.org/wiki/M_(lettre)" target="_blank">
 
 <div class="SUNSET">
   <img src="https://www.zupimages.net/up/23/28/mhd5.jpg" alt="Tableau">
@@ -2608,7 +2608,4 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
 
