--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgb(25, 79, 132);
+                background: rgb(27, 84, 141);
                  width: 100%;
                  height: 125px;
                  object-fit: cover;
@@ -259,11 +259,11 @@
           font-size: 1.02rem; 
           font-family: 'arial'; 
           line-height: 20px;
-          border-top: 0.1rem solid rgba(25, 79, 132, 0.418);
-          border-bottom-left-radius: 50rem;
-          border-bottom-right-radius: 50rem;
+          border-top: 0.1rem solid rgba(27, 84, 141, 0.046);;
+          border-bottom-left-radius: 45rem;
+          border-bottom-right-radius: 45rem;
           background: -webkit-linear-gradient( red 0%,#fffffff9 100%);
-          box-shadow: 0.25px 1px 0.3rem 0 rgba(184, 184, 184, 0.799);
+          box-shadow: 0.25px 1px 0.3rem 0 rgba(235, 235, 235, 0.904);
          }
 
          .YIKI:hover{
@@ -815,7 +815,7 @@ animation: auto 15s infinite linear;
 }
 
 .k1:hover{
-  background: rgba(142, 199, 248, 0.184);
+  background: rgba(27, 84, 141, 0.089);
 }
 
 .Noel{
@@ -870,7 +870,7 @@ animation: auto 15s infinite linear;
 .kpt:hover{
   transition: 0.25s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
-  background: #f7f7f7da;
+  background: rgba(27, 84, 141, 0.089);
   color:rgb(0, 0, 0);
   border-right: 0.25rem solid #8eabc8;
   border-top: 0.25rem solid #8eabc8;
@@ -896,7 +896,7 @@ animation: auto 15s infinite linear;
   box-shadow: -8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
   border-left: 0.25rem solid #8eabc8;
   border-top: 0.25rem solid #8eabc8;
-  background: #f5f5f5d3;
+ background: rgba(27, 84, 141, 0.089);
   border-radius: 0.5rem;
 }
 
@@ -935,7 +935,7 @@ animation: auto 15s infinite linear;
 }
 
 .CRT1:hover{
-  background: rgba(142, 199, 248, 0.184);
+   background: rgba(27, 84, 141, 0.089);
 }
 
 .CRT2{
@@ -1213,7 +1213,7 @@ height: 220px;
     padding: 15px;
 }
 .HLTHY:hover{
-  background: rgba(142, 199, 248, 0.184);
+  background: rgba(27, 84, 141, 0.089);
 }
 
 .Healthy{
@@ -1318,7 +1318,7 @@ transition: 0.26s linear;
 }
 
 .CC:hover{
-  background: rgba(142, 199, 248, 0.184);
+  background: rgba(27, 84, 141, 0.089);
 }
 
 .Texo{
@@ -1383,7 +1383,7 @@ transition: 0.26s linear;
 }
 
 .Painting:hover{
-  background: rgba(142, 199, 248, 0.184);
+  background: rgba(27, 84, 141, 0.089);
 }
 
 .P1{
@@ -2608,5 +2608,4 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
 
