--- a/index.html
+++ b/index.html
@@ -254,23 +254,26 @@
           align-items: center; 
           color: rgba(21, 64, 107, 0.968);
           width: 100%; 
-          height: 70px; 
-          padding: 9.5px; 
-          font-size: 1.02rem; 
+          height: 75px; 
+          padding: 3.5px; 
+          font-size: 1.01rem; 
           font-family: 'arial'; 
           line-height: 20px;
-          border-top: 0.1rem solid rgba(27, 84, 141, 0.046);;
-          border-bottom-left-radius: 45rem;
-          border-bottom-right-radius: 45rem;
+          word-spacing: -1px;
+          border-top: 0.12rem solid rgba(27, 84, 141, 0.15);
+          border-right: 0.1rem solid rgba(27, 84, 141, 0.278);
+          border-bottom-left-radius: 40rem;
+          border-bottom-right-radius: 40rem;
           background: -webkit-linear-gradient( red 0%,#fffffff9 100%);
-          box-shadow: 0.25px 1px 0.3rem 0 rgba(235, 235, 235, 0.904);
+          box-shadow: 1.9px 1.25px 0.3rem 0 rgba(247, 247, 247, 0.904);
          }
 
          .YIKI:hover{
           background: -webkit-linear-gradient(#fffffffd 0%, #fff 100%);
-          transition: 0.18s ease;
+          transition: 0.12s ease-in;
           color: #252525f4;
-          border-top: 0.1rem solid #fff;
+          border-right: none;
+          border-top: 0.55rem solid #000;
           box-shadow: 0.2px 0.1px 0.65rem 0 #adadadae;
          }
 
