--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       align-items: center;
                 background: rgb(24, 76, 128);
                  width: 100%;
-                 height: 115px;
+                 height: 105px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
@@ -229,7 +229,7 @@
             width: 100%; 
             height: 139px; 
             background: #b8b8b853;
-            border-bottom: 0.6rem solid rgba(255, 89, 0, 0.92);
+            border-bottom: 0.6rem solid rgba(255, 102, 20, 0.858);
             opacity: 1;
           }
 
@@ -810,6 +810,7 @@ animation: auto 15s infinite linear;
     color: #000000f4;
     line-height: 27px;
     padding: 20px;
+    border-bottom: 0.15rem solid orangered;
 }
 .k1 img{
   width: 100%;
@@ -819,6 +820,7 @@ animation: auto 15s infinite linear;
 
 .k1:hover{
   background: rgba(27, 84, 141, 0.061);
+  border-bottom: 0.15rem solid orangered;
 }
 
 .Noel{
@@ -868,7 +870,6 @@ animation: auto 15s infinite linear;
   border-top: 0.25rem solid transparent;
   padding: 18px;
   
-  
 }
 .kpt:hover{
   transition: 0.25s linear;
@@ -878,6 +879,7 @@ animation: auto 15s infinite linear;
   border-right: 0.25rem solid #8eabc8;
   border-top: 0.25rem solid #8eabc8;
   border-radius: 0.5rem;
+  border-bottom: 0.25rem solid orangered;
 }
 
 .kgp{
@@ -923,6 +925,7 @@ animation: auto 15s infinite linear;
 }
 .Cartes:hover{
   background: rgba(27, 84, 141, 0.048);
+  border-bottom: 0.15rem solid orangered;
 }
 .CRT1{
   display: grid;
@@ -941,6 +944,7 @@ animation: auto 15s infinite linear;
 
 .CRT1:hover{
   background: rgba(27, 84, 141, 0.061);
+  border-bottom: 0.15rem solid orangered;
 }
 
 .CRT2{
@@ -1219,6 +1223,7 @@ height: 220px;
 }
 .HLTHY:hover{
   background: rgba(27, 84, 141, 0.061);
+  border-bottom: 0.15rem solid orangered;
 }
 
 .Healthy{
@@ -1324,6 +1329,7 @@ transition: 0.26s linear;
 
 .CC:hover{
   background: rgba(27, 84, 141, 0.061);
+  border-bottom: 0.15rem solid orangered;
 }
 
 .Texo{
@@ -1389,6 +1395,7 @@ transition: 0.26s linear;
 
 .Painting:hover{
   background: rgba(27, 84, 141, 0.061);
+  border-bottom: 0.15rem solid orangered;
 }
 
 .P1{
