--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         height: 2rem;
         object-fit: cover;
         font-family: 'georgia';
-        background: rgba(9, 35, 87, 0.978);
+        background: rgba(9, 35, 89, 0.978);
     }
 
     .DAH{
@@ -190,7 +190,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;   
-                 box-shadow: 0 3px 0.45rem 0 rgba(27, 78, 130, 0.745);
+                 box-shadow: 0 3px 0.4rem 0 rgba(27, 79, 130, 0.664);
           }
           
           
@@ -261,7 +261,7 @@
           line-height: 20px;
           cursor: pointer;
           border-top: 0.12rem solid rgba(27, 84, 141, 0.104);
-          border-right: 0.1rem solid rgba(27, 84, 141, 0.278);
+          border-right: 0.1rem solid rgba(29, 91, 152, 0.133);
           border-bottom-left-radius: 30rem;
           border-bottom-right-radius: 30rem;
           background: -webkit-linear-gradient( red 0%,#fffffff9 100%);
@@ -925,7 +925,6 @@ animation: auto 15s infinite linear;
 }
 .Cartes:hover{
   background: rgba(27, 84, 141, 0.048);
-  border-bottom: 0.15rem solid orangered;
 }
 .CRT1{
   display: grid;
@@ -1962,7 +1961,7 @@ Tiki N'Yiki veut oeuvrer pour changer la tendance de telles mentalités, faire t
 <div class="NL">
 
   <div class="Noel">
-    <div style="font-family:'helvetica'; text-align: left; line-height: 21.6px; color:rgb(3, 129, 246); font-size: 17.5px;">
+    <div style="font-family:'helvetica'; text-align: left; line-height: 21.7px; color: rgba(126, 126, 126, 0.927); font-family: georgia; font-size: 17.5px;">
       Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki organisait un arbre de Noël à l'approche de chaque 25 décembre (Jour de la Nativité) au cours duquel
       les enfants étaient invités à un repas. Une sensibilisation sur le handicap et l'inclusion est tenue et par la suite des questions sont posées afin de 
       recueillir les réactions des un-es et des autres. 
@@ -2622,4 +2621,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
