--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         justify-content: center;
         justify-items: center;
         width: 100%;
-        height: 2rem;
+        height: 2.2rem;
         object-fit: cover;
         font-family: 'georgia';
-        background: rgba(9, 35, 89, 0.978);
+        background: rgba(173, 48, 73, 0.978);
     }
 
     .DAH{
@@ -105,7 +105,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: gold;
+      color: rgba(255, 217, 0, 0.948);
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -126,7 +126,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: gold;
+      color: rgba(255, 217, 0, 0.948);
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -166,7 +166,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: gold;
+      color: rgba(255, 217, 0, 0.948);
       padding: 10px;
       font-family: Verdana; 
       font-size: 13px;
@@ -183,14 +183,14 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgb(19, 74, 129);
+                background: rgb(59, 101, 186);
                  width: 100%;
-                 height: 102px;
+                 height: 99px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;   
-                 box-shadow: 0 3px 0.4rem 0 rgba(27, 79, 130, 0.664);
+                 box-shadow: 0 3px 0.35rem 0 rgba(59, 105, 186, 0.489);
           }
           
           
@@ -227,7 +227,7 @@
             justify-items: center;
             column-gap: 1rem;
             width: 100%; 
-            height: 139px; 
+            height: 140px; 
             background: #b8b8b853;
             border-bottom: 0.6rem solid rgba(255, 102, 20, 0.858);
             opacity: 1;
@@ -245,6 +245,25 @@
             line-height: 21px;
             margin-top: 0.7rem;
             width: 78%;
+          }
+
+          .VIDEO{
+            display: block;
+            justify-content: center;
+            justify-items: center;
+            width: 100%;
+            height: auto;
+          }
+
+          .VIDEO img{
+            width: 100%;
+            height: 10%;
+            cursor: pointer;
+            opacity: 0.94;
+          }
+
+          .VIDEO img:hover{
+          opacity: 1;
           }
 
           .tikinyiki{
@@ -650,7 +669,7 @@ opacity: 1;
   line-height: 20px;
   display: flex;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color:#02a6ff;
+  color:#0296ff;
 }
 .TYP:hover{
   color: #000;
@@ -819,7 +838,7 @@ animation: auto 15s infinite linear;
 }
 
 .k1:hover{
-  background: rgba(27, 84, 141, 0.061);
+  background: rgba(59, 101, 186, 0.118);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -942,7 +961,7 @@ animation: auto 15s infinite linear;
 }
 
 .CRT1:hover{
-  background: rgba(27, 84, 141, 0.061);
+  background: rgba(59, 101, 186, 0.118);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1221,7 +1240,7 @@ height: 220px;
     padding: 15px;
 }
 .HLTHY:hover{
-  background: rgba(27, 84, 141, 0.061);
+  background: rgba(59, 101, 186, 0.118);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1327,7 +1346,7 @@ transition: 0.26s linear;
 }
 
 .CC:hover{
-  background: rgba(27, 84, 141, 0.061);
+  background: rgba(59, 101, 186, 0.118);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1393,7 +1412,7 @@ transition: 0.26s linear;
 }
 
 .Painting:hover{
-  background: rgba(27, 84, 141, 0.061);
+  background: rgba(59, 101, 186, 0.118);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1483,26 +1502,26 @@ function myFunction() {
 
   <a href="https://disabilitycreditcanada.com/top-16-famous-people-with-disabilities/" target="_blank">
   <div class="Translator">
-  <b>Fameux handicapés</b>
+  Fameux handicapés
 </div>
 </a>
 
   <a href="https://www.online-calculator.com/full-screen-calculator/" target="_blank">
   <div class="Calculator">
-    <b>Calculatrice</b>
+    Calculatrice
   </div>
 </a>
 
 <a href="https://dictionnaire.lerobert.com/definition/paradigme" target="_blank">
   <div class="dico">
-    <b>Dictionnaire</b>
+    Dictionnaire
   </div>
 </a>
 <a href="https://www.timeanddate.com/calendar/" target="_blank">
   <div class="datime">
-    <b><p id="demo">
+    <p id="demo">
             <span id="datetime" > </span>
-         </p></b>
+         </p>
         </div>
       </a>
 
@@ -1614,6 +1633,19 @@ function myFunction() {
 </div>
 
 </div>
+
+<a href="https://codexvirtualis.fr/codex/cabinet-de-curiosites-virtuel/images-insolites-instructives/les-acrobaties-de-lescargot" target="_blank">
+
+<div class="VIDEO">
+
+<img src="https://www.zupimages.net/up/23/31/tz0v.jpg" alt="escargot">
+<figure>
+  <figcaption style="font-family: Georgia, 'Times New Roman', Times, serif; color:rgba(255, 68, 0, 0.987); font-size: 14.25px; padding: 5px;"><b>L'escargot semble porter un gros fardeau sur son dos avec sa coquille. Mais malgré cette charge vitale qu'il trimballe éternellement, il s'accroche pour arriver à bon port.</b></figcaption>
+  </figure>
+</div>
+
+</a>
+
 
 <div class="fwrapper">
 
@@ -2621,5 +2653,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
