--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         height: 2.2rem;
         object-fit: cover;
         font-family: 'georgia';
-        background: rgba(178, 47, 71, 0.978);
+        background: rgba(185, 40, 79, 0.948);
     }
 
     .DAH{
@@ -105,7 +105,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(255, 217, 0, 0.948);
+      color: cyan;
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -126,7 +126,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(255, 217, 0, 0.948);
+      color: cyan;
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -146,7 +146,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: gold;
+      color: cyan;
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -166,7 +166,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(255, 217, 0, 0.948);
+      color: cyan;
       padding: 10px;
       font-family: Verdana; 
       font-size: 13px;
@@ -183,7 +183,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgb(59, 98, 188);
+                background: rgb(60, 105, 210);
                  width: 100%;
                  height: 100px;
                  object-fit: cover;
