--- a/index.html
+++ b/index.html
@@ -1644,7 +1644,7 @@ function myFunction() {
 
 <div class="VIDEO">
 
-<img src="https://www.zupimages.net/up/23/31/tz0v.jpg" alt="escargot">
+<img src="https://www.zupimages.net/up/23/31/1gi8.jpg" alt="escargot">
 <figure>
   <figcaption style="font-family: Georgia, 'Times New Roman', Times, serif; color:rgba(255, 68, 0, 0.987); font-size: 13px; padding: 5px;"><b>L'escargot semble porter un gros fardeau sur son dos avec sa coquille. Mais malgré cette charge vitale qu'il trimballe éternellement, il s'accroche pour arriver à bon port.</b></figcaption>
   </figure>
@@ -2659,6 +2659,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
