--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgb(66, 120, 222);
+                background: rgba(79, 126, 236, 0.991);
                  width: 100%;
                  height: 107px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;   
-                 box-shadow: 0 2px 0.27rem 0 rgba(66, 121, 222, 0.695);
+                 box-shadow: 0 2px 0.2rem 0 rgba(76, 118, 234, 0.445);
           }
           
           
@@ -213,7 +213,7 @@
 .TYK1:hover{
   background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: yellow;
+            color: rgb(128, 255, 25);
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
@@ -271,7 +271,7 @@
           flex-direction: column; 
           justify-content: center; 
           justify-items: center; 
-          color: rgba(21, 64, 107, 0.968);
+          color: rgba(1, 6, 11, 0.968);
           width: auto; 
           height: 75px; 
           padding: 2px;
@@ -279,12 +279,12 @@
           font-family: 'arial'; 
           line-height: 20px;
           cursor: pointer;
-          border-top: 0.12rem solid rgba(27, 84, 141, 0.104);
-          border-right: 0.1rem solid rgba(29, 91, 152, 0.133);
+          border-top: 0.1rem solid rgba(196, 40, 82, 0.375);
+          border-right: 0.1rem solid rgba(92, 170, 248, 0.097);
           border-bottom-left-radius: 30rem;
           border-bottom-right-radius: 30rem;
-          background: -webkit-linear-gradient( red 0%,#fffffff9 100%);
-          box-shadow: 1.9px 1.25px 0.3rem 0 rgba(247, 247, 247, 0.904);
+          background: -webkit-linear-gradient( rgba(196, 40, 81, 0.953) 0%,#fffffff9 100%);
+          box-shadow: 1.5px 1.25px 0.2rem 0 rgba(242, 245, 255, 0.948);
          }
 
          .tikinyiki:hover{
@@ -316,7 +316,7 @@
           .myDiv:hover{
             background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: yellow;
+            color: rgb(128, 255, 25);
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
@@ -342,7 +342,7 @@
           .myDiv1:hover{
             background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: yellow;
+            color: rgb(128, 255, 25);
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
@@ -368,7 +368,7 @@
           .myDiv2:hover{
             background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: yellow;
+            color: rgb(128, 255, 25);
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
@@ -393,7 +393,7 @@
           .myDivT:hover{
             background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: yellow;
+            color: rgb(128, 255, 25);
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
@@ -419,7 +419,7 @@
           .Peinture:hover{
             background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: yellow;
+            color: rgb(128, 255, 25);
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
@@ -446,7 +446,7 @@
           .myDiv6:hover{
             background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: yellow;
+            color: rgb(128, 255, 25);
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
@@ -2659,10 +2659,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
-
-
 
 
