--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             width: 100%; 
             height: 141px; 
             background: #b0b0b058;
-            border-bottom: 0.5rem solid rgba(200, 42, 84, 0.923);
+            border-bottom: 0.5rem solid rgba(255, 68, 0, 0.918);
             opacity: 1;
           }
 
@@ -279,12 +279,12 @@
           font-family: 'arial'; 
           line-height: 20px;
           cursor: pointer;
-          border-top: 0.1rem solid rgba(196, 40, 82, 0.375);
+          border-top: 0.1rem solid rgba(255, 0, 0, 0.288);
           border-right: 0.1rem solid rgba(92, 170, 248, 0.097);
           border-bottom-left-radius: 30rem;
           border-bottom-right-radius: 30rem;
-          background: -webkit-linear-gradient( rgba(196, 40, 81, 0.953) 0%,#fffffff9 100%);
-          box-shadow: 1.5px 1.25px 0.2rem 0 rgba(242, 245, 255, 0.948);
+          background: -webkit-linear-gradient( orangered 0%,#fffffff9 100%);
+          box-shadow: 1.5px 1.25px 0.19rem 0 rgba(196, 196, 196, 0.948);
          }
 
          .tikinyiki:hover{
@@ -2659,5 +2659,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
