--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;   
-                 box-shadow: 0 2px 0.2rem 0 rgba(58, 121, 229, 0.501);
+                 box-shadow: 0 2px 0.2rem 0 rgba(62, 124, 232, 0.384);
           }
           
           
@@ -229,7 +229,7 @@
             width: 100%; 
             height: 140px; 
             background: #b0b0b058;
-            border-bottom: 0.5rem solid rgba(255, 68, 0, 0.844);
+            border-bottom: 0.5rem solid #f1f1f1;
             opacity: 1;
           }
 
@@ -2659,6 +2659,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
